--- a/sqlite3_exercises.ipynb
+++ b/sqlite3_exercises.ipynb
@@ -447,12 +447,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jbFvDw8yyvYJ",
-        "outputId": "ddaee393-f925-4a70-f187-0e29bcf5ecac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "id": "jbFvDw8yyvYJ",
+        "outputId": "ddaee393-f925-4a70-f187-0e29bcf5ecac"
       },
       "source": [
         "consulta('pragma table_info(olist_orders_dataset)')"
@@ -756,6 +756,157 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "4JOJhsgozCRI"
+      },
+      "source": [
+        "Resposta:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zystQ93CzGUU",
+        "outputId": "3ea9a2cd-20df-45bf-88ef-901686f4dc71",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 349
+        }
+      },
+      "source": [
+        "consulta('SELECT * FROM olist_order_reviews_dataset')"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>review_id</th>\n",
+              "      <th>order_id</th>\n",
+              "      <th>review_score</th>\n",
+              "      <th>review_comment_title</th>\n",
+              "      <th>review_comment_message</th>\n",
+              "      <th>review_creation_date</th>\n",
+              "      <th>review_answer_timestamp</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>7bc2406110b926393aa56f80a40eba40</td>\n",
+              "      <td>73fc7af87114b39712e6da79b0a377eb</td>\n",
+              "      <td>4</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "      <td>2018-01-18 00:00:00</td>\n",
+              "      <td>2018-01-18 21:46:59</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>80e641a11e56f04c1ad469d5645fdfde</td>\n",
+              "      <td>a548910a1c6147796b98fdf73dbeba33</td>\n",
+              "      <td>5</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "      <td>2018-03-10 00:00:00</td>\n",
+              "      <td>2018-03-11 03:05:13</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>228ce5500dc1d8e020d8d1322874b6f0</td>\n",
+              "      <td>f9e4b658b201a9f2ecdecbb34bed034b</td>\n",
+              "      <td>5</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "      <td>2018-02-17 00:00:00</td>\n",
+              "      <td>2018-02-18 14:36:24</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99997</th>\n",
+              "      <td>1adeb9d84d72fe4e337617733eb85149</td>\n",
+              "      <td>7725825d039fc1f0ceb7635e3f7d9206</td>\n",
+              "      <td>4</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "      <td>2018-07-01 00:00:00</td>\n",
+              "      <td>2018-07-02 12:59:13</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99998</th>\n",
+              "      <td>be360f18f5df1e0541061c87021e6d93</td>\n",
+              "      <td>f8bd3f2000c28c5342fedeb5e50f2e75</td>\n",
+              "      <td>1</td>\n",
+              "      <td>None</td>\n",
+              "      <td>Solicitei a compra de uma capa de retrovisor c...</td>\n",
+              "      <td>2017-12-15 00:00:00</td>\n",
+              "      <td>2017-12-16 01:29:43</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99999</th>\n",
+              "      <td>efe49f1d6f951dd88b51e6ccd4cc548f</td>\n",
+              "      <td>90531360ecb1eec2a1fbb265a0db0508</td>\n",
+              "      <td>1</td>\n",
+              "      <td>None</td>\n",
+              "      <td>meu produto chegou e ja tenho que devolver, po...</td>\n",
+              "      <td>2017-07-03 00:00:00</td>\n",
+              "      <td>2017-07-03 21:01:49</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>100000 rows × 7 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                              review_id  ... review_answer_timestamp\n",
+              "0      7bc2406110b926393aa56f80a40eba40  ...     2018-01-18 21:46:59\n",
+              "1      80e641a11e56f04c1ad469d5645fdfde  ...     2018-03-11 03:05:13\n",
+              "2      228ce5500dc1d8e020d8d1322874b6f0  ...     2018-02-18 14:36:24\n",
+              "...                                 ...  ...                     ...\n",
+              "99997  1adeb9d84d72fe4e337617733eb85149  ...     2018-07-02 12:59:13\n",
+              "99998  be360f18f5df1e0541061c87021e6d93  ...     2017-12-16 01:29:43\n",
+              "99999  efe49f1d6f951dd88b51e6ccd4cc548f  ...     2017-07-03 21:01:49\n",
+              "\n",
+              "[100000 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "NYViWp2hqcaF"
       },
       "source": [
@@ -926,6 +1077,159 @@
             "tags": []
           },
           "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dLse-bINzzZu"
+      },
+      "source": [
+        "Resposta:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EL6Gtomxz2eH",
+        "outputId": "377311f3-5d03-4beb-952a-d2ff56a40bb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 349
+        }
+      },
+      "source": [
+        "consulta('''SELECT * FROM olist_order_reviews_dataset\n",
+        "             where review_score=5 \n",
+        "            ''')"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>review_id</th>\n",
+              "      <th>order_id</th>\n",
+              "      <th>review_score</th>\n",
+              "      <th>review_comment_title</th>\n",
+              "      <th>review_comment_message</th>\n",
+              "      <th>review_creation_date</th>\n",
+              "      <th>review_answer_timestamp</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>80e641a11e56f04c1ad469d5645fdfde</td>\n",
+              "      <td>a548910a1c6147796b98fdf73dbeba33</td>\n",
+              "      <td>5</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "      <td>2018-03-10 00:00:00</td>\n",
+              "      <td>2018-03-11 03:05:13</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>228ce5500dc1d8e020d8d1322874b6f0</td>\n",
+              "      <td>f9e4b658b201a9f2ecdecbb34bed034b</td>\n",
+              "      <td>5</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "      <td>2018-02-17 00:00:00</td>\n",
+              "      <td>2018-02-18 14:36:24</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>e64fb393e7b32834bb789ff8bb30750e</td>\n",
+              "      <td>658677c97b385a9be170737859d3511b</td>\n",
+              "      <td>5</td>\n",
+              "      <td>None</td>\n",
+              "      <td>Recebi bem antes do prazo estipulado.</td>\n",
+              "      <td>2017-04-21 00:00:00</td>\n",
+              "      <td>2017-04-21 22:02:06</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>57417</th>\n",
+              "      <td>574ed12dd733e5fa530cfd4bbf39d7c9</td>\n",
+              "      <td>2a8c23fee101d4d5662fa670396eb8da</td>\n",
+              "      <td>5</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "      <td>2018-07-07 00:00:00</td>\n",
+              "      <td>2018-07-14 17:18:30</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>57418</th>\n",
+              "      <td>f3897127253a9592a73be9bdfdf4ed7a</td>\n",
+              "      <td>22ec9f0669f784db00fa86d035cf8602</td>\n",
+              "      <td>5</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "      <td>2017-12-09 00:00:00</td>\n",
+              "      <td>2017-12-11 20:06:42</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>57419</th>\n",
+              "      <td>b3de70c89b1510c4cd3d0649fd302472</td>\n",
+              "      <td>55d4004744368f5571d1f590031933e4</td>\n",
+              "      <td>5</td>\n",
+              "      <td>None</td>\n",
+              "      <td>Excelente mochila, entrega super rápida. Super...</td>\n",
+              "      <td>2018-03-22 00:00:00</td>\n",
+              "      <td>2018-03-23 09:10:43</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>57420 rows × 7 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                              review_id  ... review_answer_timestamp\n",
+              "0      80e641a11e56f04c1ad469d5645fdfde  ...     2018-03-11 03:05:13\n",
+              "1      228ce5500dc1d8e020d8d1322874b6f0  ...     2018-02-18 14:36:24\n",
+              "2      e64fb393e7b32834bb789ff8bb30750e  ...     2017-04-21 22:02:06\n",
+              "...                                 ...  ...                     ...\n",
+              "57417  574ed12dd733e5fa530cfd4bbf39d7c9  ...     2018-07-14 17:18:30\n",
+              "57418  f3897127253a9592a73be9bdfdf4ed7a  ...     2017-12-11 20:06:42\n",
+              "57419  b3de70c89b1510c4cd3d0649fd302472  ...     2018-03-23 09:10:43\n",
+              "\n",
+              "[57420 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
         }
       ]
     },
