--- a/sqlite3_exercises.ipynb
+++ b/sqlite3_exercises.ipynb
@@ -765,12 +765,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zystQ93CzGUU",
-        "outputId": "3ea9a2cd-20df-45bf-88ef-901686f4dc71",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
-        }
+        },
+        "id": "zystQ93CzGUU",
+        "outputId": "3ea9a2cd-20df-45bf-88ef-901686f4dc71"
       },
       "source": [
         "consulta('SELECT * FROM olist_order_reviews_dataset')"
@@ -1092,12 +1092,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EL6Gtomxz2eH",
-        "outputId": "377311f3-5d03-4beb-952a-d2ff56a40bb0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
-        }
+        },
+        "id": "EL6Gtomxz2eH",
+        "outputId": "377311f3-5d03-4beb-952a-d2ff56a40bb0"
       },
       "source": [
         "consulta('''SELECT * FROM olist_order_reviews_dataset\n",
@@ -1230,47 +1230,6 @@
             "tags": []
           },
           "execution_count": 21
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Zjpd0-ch9vIN",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 384
-        },
-        "outputId": "0ec53fdd-4d79-4d92-a8b9-b45829c14aa6"
-      },
-      "source": [
-        "consulta('''SELECT * from olist_order_payments_dataset \n",
-        "             where payment_value >500 \n",
-        "             and payment_type = \"credit_card\"''')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "ERROR:root:An unexpected error occurred while tokenizing input\n",
-            "The following traceback may be corrupted or invalid\n",
-            "The error message is: ('EOF in multi-line string', (1, 46))\n",
-            "\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "error",
-          "ename": "OperationalError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-10-35bb54f68f4a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m consulta('''SELECT * from olist_order_payments_dataset \n\u001b[1;32m      2\u001b[0m              \u001b[0mwhere\u001b[0m \u001b[0mpayment_value\u001b[0m \u001b[0;34m>\u001b[0m\u001b[0;36m500\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m              and payment_type == \"credit_card\"''')\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-6-d86df19ee199>\u001b[0m in \u001b[0;36mconsulta\u001b[0;34m(query)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mconsulta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcursor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mconsult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconsult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mcols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mconsult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mOperationalError\u001b[0m: no such table: olist_order_payments_dataset"
-          ]
         }
       ]
     },
@@ -1413,6 +1372,143 @@
             "tags": []
           },
           "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5k2GdcZO0dOV"
+      },
+      "source": [
+        "Resposta:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YpFFETH20h8g",
+        "outputId": "5567c59e-eab7-4e48-8e29-ce91fb4d2776",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 295
+        }
+      },
+      "source": [
+        "consulta('''SELECT * from olist_order_payments_dataset \n",
+        "             where payment_value >500 \n",
+        "             and payment_type = \"credit_card\"''')"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>order_id</th>\n",
+              "      <th>payment_sequential</th>\n",
+              "      <th>payment_type</th>\n",
+              "      <th>payment_installments</th>\n",
+              "      <th>payment_value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>d0a945f85ba1074b60aac97ade7e240e</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>2</td>\n",
+              "      <td>541.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2e2c60b99754ae1e4d8b18846cfec9f2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>4</td>\n",
+              "      <td>542.66</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>110d9355d6338eab0a65a0cacdde5434</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>5</td>\n",
+              "      <td>566.40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3485</th>\n",
+              "      <td>4198c92e06d92792e49f119f659e723e</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>10</td>\n",
+              "      <td>1294.26</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3486</th>\n",
+              "      <td>0f121110b75ef7c38c79d67833c49830</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>10</td>\n",
+              "      <td>956.86</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3487</th>\n",
+              "      <td>df8ab61cb615d551483618533aceb364</td>\n",
+              "      <td>1</td>\n",
+              "      <td>credit_card</td>\n",
+              "      <td>10</td>\n",
+              "      <td>713.65</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>3488 rows × 5 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                              order_id  ...  payment_value\n",
+              "0     d0a945f85ba1074b60aac97ade7e240e  ...         541.00\n",
+              "1     2e2c60b99754ae1e4d8b18846cfec9f2  ...         542.66\n",
+              "2     110d9355d6338eab0a65a0cacdde5434  ...         566.40\n",
+              "...                                ...  ...            ...\n",
+              "3485  4198c92e06d92792e49f119f659e723e  ...        1294.26\n",
+              "3486  0f121110b75ef7c38c79d67833c49830  ...         956.86\n",
+              "3487  df8ab61cb615d551483618533aceb364  ...         713.65\n",
+              "\n",
+              "[3488 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
         }
       ]
     },
